# smart-retail

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  pyproject.toml
.claude/: README.md
.claude/rules/: coding-rules.md  safety.md
alembic/: env.py
alembic/versions/: 58ea04b7bc37_initial_schema.py  a1b2c3d4e5f6_add_hallucination_and_judge_prompt_version.py
data/: zhuanhu_tax_ids.example.json
docs/architecture/: architecture.md  search-architecture.md
docs/learning/: langchain_orchestration.py
docs/plans/: README.md  data-governance.md  product-search-vectorization.md  search-tuning-decision-record-20260613.md
prompts/judge/: v1.0.md
prompts/recommendation/: v1.0.md
scripts/: dev.sh  promo_forecast_dry_run.py  refresh-lab-creds.sh  refresh-session-token.sh
scripts/db/: reset.sh
scripts/etl/: aggregate_monthly.py  bootstrap_hybrid_margin.py  classify_dealers.py  cross_sell_gaps.py  embed_products_os.py  investigate_hybrid_fusion.py  judge_hybrid_search.py  judge_search_relevance.py  load_products_os.py  verify_search_os.py  wsweep_50q.py
scripts/localstack/: init-buckets.sh
src/recommender/: __init__.py  config.py  db.py  deps.py  errors.py  llm.py  main.py  prompts.py  timeutil.py
src/search_engine/: client.py  embeddings.py  fusion.py  repository.py  router.py  schemas.py  (+1 more)
tests/: conftest.py  test_chains.py  test_etl_units.py  test_guardrail.py  test_pipeline_e2e.py  test_product_search_units.py  test_search_api_smoke.py  test_search_units.py
ui/: search.html
(+43 files in other folders)
