[project]
name = "marketing-cleaner"
version = "0.1.0"
description = "Marketing recommendation pipeline POC: S3 ETL + Bedrock LLM analysis + HubSpot sync"
authors = [
    { name = "marketing-cleaner contributors" }
]
readme = "README.md"
requires-python = ">=3.14"

dependencies = [
    # Web
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "python-multipart>=0.0.20",
    # DB
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "greenlet>=3.0",  # SQLAlchemy async 需要
    # AWS
    "boto3>=1.35",
    "aioboto3>=13.0",
    # Data wrangling (ETL)
    "pandas>=2.2",
    # LLM
    "langchain>=0.3",
    "langchain-aws>=0.2",
    "langchain-core>=0.3",
    "langsmith>=0.2",
    # Config & validation
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    # HTTP client
    "httpx>=0.28",
    "opensearch-py[async]>=3.2.0",
    "pyyaml>=6.0.3",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.25",
    "ruff>=0.8",
    "mypy>=1.13",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recommender", "src/search_engine"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "module"
testpaths = ["tests"]
